--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,10 @@ button:hover{
   background: gold;
   color: palevioletred;
 }
+
+.card-grid{
+  margin-top: 40px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 20px;
+} 
