--- a/src/components/SingleCard.css
+++ b/src/components/SingleCard.css
@@ -12,9 +12,22 @@
 /*front of card - pic*/
 .card .front{                   /*original state without flipped class*/
     transform: rotateY(90deg);  /*rotate by 90° around y axis*/
+    transition: all ease-in 0.2s;
     position: absolute;         /*so it's relative to the parent element*/
 }
 
 .flipped .front{
     transform: rotateY(0deg);   /*hiding the cover underneath it*/
+    transition-delay: 0.2s;
+}
+
+/*back of card - cover*/
+.card .back{
+    transition: all ease-in 0.2s;
+    transition-delay: 0.2s;
+}
+
+.flipped .back{
+    transform: rotateY(90deg);
+    transition-delay: 0s;
 }
