--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,36 @@
+/*color palette
+blue: #274C94
+lightrose: #DFBCBC
+redish: #A61F52
+yellow: #F0AA31
+*/
+
 /*App in App.js*/
 .App {
-  max-width: 860px;
+  max-width: 1600px;
   margin: 40px auto;
+  display: flex;
+  flex-direction: row;
+}
+button {
+  width: 150px;
+  height: 50px;
+  border-radius: 5px;
+  font-weight: bolder;
+  font-size: 0.8em;
+  cursor: pointer;
 }
 
-button {
-  background: none;
-  border: 2px solid #fff;
-  padding: 6px 12px;
-  border-radius: 4px;
-  color: #fff;
-  font-weight: bold;
-  cursor: pointer;
-  font-size: 1em;
-}
 
 button:hover {
-  background: gold;
-  color: palevioletred;
+  background: #F0AA31;
+  color: #274C94;
 }
 
 .card-grid {
   margin-top: 40px;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 20px;
 
 }
