--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,17 @@ yellow: #F0AA31
   display: flex;
   flex-direction: row;
 }
+
+h1, 
+p {
+  color: #274C94;
+}
+
+html, 
+body {
+  background-color: #DFBCBC;
+}
+
 button {
   width: 150px;
   height: 50px;
@@ -32,5 +43,46 @@ button:hover {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 20px;
+
+}
+
+@media(max-width:600px) {
+  .App {
+    display: flex;
+    flex-direction: column;
+    margin: 10px auto;
+  }
+
+  button {
+    width: 100px;
+    height: 25px;
+    border-radius: 5px;
+    font-size: 0.5em;
+    margin-top: 5px;
+  }
+
+  button:hover { 
+      background: #F0AA31;
+        color: #274C94;
+  }
+
+  h1 {
+    font-size: 1.5rem;
+  }
+
+  p {
+    font-size: 1rem;
+  }
+
+  .card-grid {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+
+
+
+
+
+
+
 
 }
